err/otrebuilder.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cu2qu'...
Listing './lib/python3.5/site-packages/cu2qu-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/fontTools'...
Listing './lib/python3.5/site-packages/fontTools/cffLib'...
Listing './lib/python3.5/site-packages/fontTools/encodings'...
Listing './lib/python3.5/site-packages/fontTools/feaLib'...
Listing './lib/python3.5/site-packages/fontTools/misc'...
Listing './lib/python3.5/site-packages/fontTools/mtiLib'...
Listing './lib/python3.5/site-packages/fontTools/otlLib'...
Listing './lib/python3.5/site-packages/fontTools/pens'...
Listing './lib/python3.5/site-packages/fontTools/subset'...
Listing './lib/python3.5/site-packages/fontTools/svgLib'...
Listing './lib/python3.5/site-packages/fontTools/svgLib/path'...
Listing './lib/python3.5/site-packages/fontTools/t1Lib'...
Listing './lib/python3.5/site-packages/fontTools/ttLib'...
Listing './lib/python3.5/site-packages/fontTools/ttLib/tables'...
Listing './lib/python3.5/site-packages/fontTools/unicodedata'...
Listing './lib/python3.5/site-packages/fontTools/varLib'...
Listing './lib/python3.5/site-packages/fontTools/voltLib'...
Listing './lib/python3.5/site-packages/fonttools-3.21.2.dist-info'...
Listing './lib/python3.5/site-packages/otRebuilder'...
Listing './lib/python3.5/site-packages/otRebuilder/Dep'...
Listing './lib/python3.5/site-packages/otRebuilder/Lib'...
Compiling './lib/python3.5/site-packages/otRebuilder/Lib/Initializer.py'...
***   File "./lib/python3.5/site-packages/otRebuilder/Lib/Initializer.py", line 270
    post.isFixedPitch = 0L
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/otrebuilder-1.5.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/toml-0.9.4.egg-info'...
Listing './lib/python3.5/site-packages/ufoLib'...
Listing './lib/python3.5/site-packages/ufoLib/test'...
Listing './lib/python3.5/site-packages/ufoLib/test/testdata'...
Listing './lib/python3.5/site-packages/ufoLib/test/testdata/DemoFont.ufo'...
Listing './lib/python3.5/site-packages/ufoLib/test/testdata/DemoFont.ufo/glyphs'...
Listing './lib/python3.5/site-packages/ufoLib/test/testdata/TestFont1 (UFO1).ufo'...
Listing './lib/python3.5/site-packages/ufoLib/test/testdata/TestFont1 (UFO1).ufo/glyphs'...
Listing './lib/python3.5/site-packages/ufoLib/test/testdata/TestFont1 (UFO2).ufo'...
Listing './lib/python3.5/site-packages/ufoLib/test/testdata/TestFont1 (UFO2).ufo/glyphs'...
Listing './lib/python3.5/site-packages/ufoLib/test/testdata/UFO3-Read Data.ufo'...
Listing './lib/python3.5/site-packages/ufoLib/test/testdata/UFO3-Read Data.ufo/data'...
Listing './lib/python3.5/site-packages/ufoLib/test/testdata/UFO3-Read Data.ufo/data/org.unifiedfontobject.directory'...
Listing './lib/python3.5/site-packages/ufoLib/test/testdata/UFO3-Read Data.ufo/data/org.unifiedfontobject.directory/bar'...
Listing './lib/python3.5/site-packages/ufoLib-2.1.1.dist-info'...
Listing './otRebuilder'...
Listing './otRebuilder/Dep'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
